refactor: Moved the XML files to the resource directory and removed redundant and unused codes